# DtrackVulnReports

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_baseline.py  0002_create_tables.py  0003_fix_findings_unique_constraint.py  0004_add_cve_id_to_findings.py  0005_add_sprints_and_treatments.py  0006_finding_lifecycle_and_identity.py
docs/specs/: constitution.md  plan.md  spec.md  tasks.md
src/vulntrack/: config.py  logging_config.py
src/vulntrack/application/queries/: _project_lookup.py  _sprint_lookup.py  available_vulnerabilities_query.py  dashboard_query.py  prioritized_findings_query.py  project_detail_query.py  quarterly_metrics_query.py
src/vulntrack/application/remediation/: create_plan.py  export_plan.py  suggest_tasks.py  update_task.py
src/vulntrack/application/reports/: build_report_data.py  generate_portfolio_report.py  generate_project_report.py
src/vulntrack/application/sprints/: close_sprint.py  create_sprint.py  exceptions.py  update_sprint.py
src/vulntrack/application/sync/: finding_reconciler.py  sync_kev.py  sync_portfolio.py  treatment_sync_reconciler.py
src/vulntrack/application/treatments/: create_treatments.py  generate_top_score_treatments.py  update_treatment.py
src/vulntrack/domain/: exceptions.py
src/vulntrack/domain/entities/: finding.py  kev_entry.py  metric_snapshot.py  project.py  remediation.py  sprint.py  vulnerability_treatment.py
src/vulntrack/domain/ports/: app_settings_repository.py  dt_client.py  finding_repository.py  kev_repository.py  project_repository.py  remediation_repository.py  report_generator.py  (+4 more)
tests/: conftest.py
tests/application/: test_build_report_data.py  test_dashboard_query.py  test_generate_report.py  test_queries.py  test_suggest_tasks.py  test_sync_kev.py  test_sync_portfolio.py
tests/domain/: test_advance_calculator.py  test_cve_normalizer.py  test_cvss_parser.py  test_entities.py  test_kev_matcher.py  test_prioritization.py  test_value_objects.py
tests/infrastructure/: conftest.py  test_chart_builder.py  test_cisa_kev_client.py  test_docx_generator.py  test_dt_client.py  test_dt_response_models.py  test_pdf_generator.py  test_repositories.py  test_xlsx_generator.py
tests/infrastructure/fixtures/: cisa_kev_sample.json  dt_finding_ghsa_with_cve_alias.json  dt_findings.json  dt_metrics.json  dt_project.json
tests/web/: test_e2e.py  test_health.py  test_routers.py
(+80 files in other folders)
