[project]
name = "vulntrack"
version = "0.1.0"
description = "Plataforma de reportes de vulnerabilidades sobre Dependency-Track"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    "apscheduler>=3.10.4",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.3",
    "matplotlib>=3.9.0",
    "structlog>=24.2.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "pillow>=10.4.0",
    "weasyprint>=62.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "mypy>=1.10.0",
    "ruff>=0.5.0",
    "pre-commit>=3.7.0",
    "pytest-cov>=5.0.0",
    "anyio[trio]>=4.4.0",
    "sqlalchemy[mypy]>=2.0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vulntrack"]

# ── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "RUF"]
ignore = [
    "S101",  # assert en tests
    "S105",  # posible contraseña hardcodeada (falsos positivos en constantes)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "N802"]

# ── Mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
exclude = ["alembic/"]

[[tool.mypy.overrides]]
module = ["vulntrack.domain.*", "vulntrack.application.*"]
strict = true
disallow_untyped_defs = true
disallow_any_generics = true
warn_return_any = true

[[tool.mypy.overrides]]
module = ["vulntrack.infrastructure.*", "vulntrack.interfaces.*", "vulntrack.config", "vulntrack.logging_config"]
disallow_untyped_defs = true
ignore_missing_imports = true

# ── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["src/vulntrack"]
omit = ["*/alembic/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
